<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewUserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="10sp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                tools:srcCompat="?attr/homeAsUpIndicator" />

            <TextView
                style="@style/main_menu_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_window_newuser"
                android:textSize="25sp" />

        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    style="@style/main_menu_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/surname_window_newuser"
                    android:inputType="text"
                    android:textAlignment="center" />

                <EditText
                    style="@style/main_menu_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_window_newuser"
                    android:inputType="text"
                    android:textAlignment="center" />

                <EditText
                    style="@style/main_menu_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/middlename_window_newuser"
                    android:inputType="text"
                    android:textAlignment="center" />

                <TextView
                    style="@style/main_menu_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:text="@string/text_window_newuser" />

                <EditText
                    style="@style/main_menu_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/date_window_newuser"
                    android:inputType="date"
                    android:textAlignment="center" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="20sp"
                    android:layout_marginEnd="@dimen/indent_edges"
                    tools:srcCompat="@android:drawable/ic_menu_save" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</FrameLayout>