<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddNewTaskFragment"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16sp"
                android:layout_marginBottom="16sp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                tools:srcCompat="?attr/homeAsUpIndicator" />

            <TextView
                style="Введите данные вакцины:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_add_new_task"
                android:textSize="@dimen/header_size" />

        </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView"
                        style="@style/main_menu_buttons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/header_add_new_task"/>

                    <Spinner
                        android:id="@+id/spinner"
                        style="@style/main_menu_buttons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:entries="@array/spinner_test"
                        android:layout_marginTop="8sp"/>

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/main_menu_buttons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vaccine_add_new_task"
                        android:layout_marginTop="16sp"/>

                    <Spinner
                        android:id="@+id/spinner2"
                        style="@style/main_menu_buttons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:entries="@array/spinner_test"
                        android:layout_marginTop="8sp"/>

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/main_menu_buttons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date_add_new_task"
                        android:layout_marginTop="16sp"/>

                    <EditText
                        android:id="@+id/editTextDate"
                        style="@style/main_menu_buttons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/date_edit_text"
                        android:inputType="date"
                        android:textAlignment="center"
                        android:layout_marginTop="8sp"
                        android:autofillHints="@string/date_edit_text" />

                    <EditText
                        android:id="@+id/editTextTime"
                        style="@style/main_menu_buttons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/time_edit_text"
                        android:inputType="time"
                        android:textAlignment="center"
                        android:layout_marginTop="8sp"
                        android:autofillHints="@string/time_edit_text"/>

                    <ImageView
                        android:id="@+id/imageView4"
                        tools:srcCompat="@android:drawable/ic_menu_save"
                        style="@style/save_button_style" />

            </LinearLayout>
        </ScrollView>

        </LinearLayout>
    </FrameLayout>
</layout>